--- a/index.html
+++ b/index.html
@@ -3,7 +3,13 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>React Router Dom</title>
+    <title>My Team</title>
+    <style>
+        body {
+          background-color: #014E56;
+          color: #FFF;
+        }
+    </style>
   </head>
   <body>
     <div id="root"></div>
